--- a/module2_solution/index1.html
+++ b/module2_solution/index1.html
@@ -13,7 +13,7 @@
 	<div class="row">
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
-		<div id="chicken">
+		<div id="Chicken">
 			Chicken
 		</div>
 		<p>
@@ -23,8 +23,8 @@
 	</div>
 	<div class="container col-lg-4 col-md-6 col-sm-12">
 		<section>
-		<div id="beef">
-			Beef
+		<div id="Mutton">
+			Mutton
 		</div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
@@ -33,8 +33,8 @@
 	</div>
 	<div class="container col-lg-4 col-md-12 col-sm-12">
 		<section>
-		<div id="sushi">
-			Sushi
+		<div id="Vegeterian">
+			Vegeterian
 		</div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
